welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: value + is not a member of Null
	nbpas=nbpas+1
                   ^