welcome.lessons.welcome.variables.Variables.scala.code
var nbpas=null;
var dejafait=null



while (estSurBiscuit() == false) {
	avance()
	nbpas=nbpas+1
}
prendBiscuit()
while (dejafait != nbpas ) {
	recule()
}
